Fix aqueduct z-index for .srchcontainer

--- a/src/less/aqueduct-fix.less
+++ b/src/less/aqueduct-fix.less
@@ -5,7 +5,9 @@
 .menu-footer ul li a,
 .menu-footer,
 .main-navigation ul,
-.srchcontainer,
 ul.bjqs-controls {
+	z-index: 998;
+}
+.srchcontainer {
 	z-index: 999;
 }
